// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LinkButton 1`] = `
.c0 {
  background: lightgrey;
  border-radius: 0.25rem;
  color: black;
  white-space: nowrap;
}

<button
  class="c0"
>
  Push Me
</button>
`;

exports[`renders LinkButton with onClick and disabled props 1`] = `
.c0 {
  background: lightgrey;
  border-radius: 0.25rem;
  color: black;
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
>
  Push Me
</button>
`;

exports[`renders LinkButton with onClick prop 1`] = `
.c0 {
  background: lightgrey;
  border-radius: 0.25rem;
  color: black;
  white-space: nowrap;
}

<button
  class="c0"
>
  Push Me
</button>
`;
